css/home.css
body {
  position:relative !important;
  margin-top:60px;
  font-family:'Roboto';
}
h1 {
  color:#ff3030;
  font-family:'Headland One', serif;
  font-weight:bold;
}
h2 {
  font-family:'Headland One', serif;
}
.project a {
  color:#ff3030;
  text-decoration:none;
}

.active {
  border-bottom:3px solid #ff3030;
  font-weight:bold;
}

.navbar a {
  background-color:#fff !important;
}

.navbar {
  background-color:#fff;
  border-bottom:0px solid #9E0000;
  box-shadow: 0 0px 0px #333;
  border-radius:0;
  min-height:41px;
}

.navbar-nav li {
  margin: 0 15px;
}

.navbar-nav li a {
  color:;
  padding-bottom:3px;
}

#portfolio {
  background-color:#333;
  height:auto;
  width:100%;
  padding:10px;
  margin-top:30px;
}

#portfolio h2 {
  color:white;
}

#portfolio h4 {
  background:rgba(255,48,48,0.78);
  color:white;
  text-align:center;
}

.project-row {
  margin-bottom:20px;
}

.project {
  min-height:400px;
}
.project p {
  margin-top: 10px;
  border-left: 5px solid rgba(255,48,48,0.78);
  padding-left: 8px;
}

.project img {
  height:200px !important;
  width:100% !important;
  filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+ */
  filter: gray; /* IE6-9 */
  -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
  transition:0.5s;
}

.project img:hover {
  filter: none;
  -webkit-filter: grayscale(0%);
  transition:0.5s;
}

.project-date {
  margin-left:5px;
  font-size:10px;
  color:gray;
  text-decoration:underline;
  font-style:italic;
}
.project-tech {
  margin-left:5px;
  font-size:12px;
  color:gray;
}
.project-date i,
.project-tech i {
  margin-right:5px;
  font-size:14px;
}

#profile {
  border-left:3px solid #ff3030;

}

.footer {
  background-color:#333;
  padding-top:10px;
  border-top:1px solid darkgray;

  color:white;
}
.footer a {
  color:white;
  text-decoration:none;
}

.active-tab {
  border-bottom:5px solid white;

}
#repeat {
  height: 22px;
  width: 74px;
  background: #333;
  opacity:0.38;
  border-bottom: 10px double white;
  transform: rotate(-90deg);
  display: inline-block;
  top: 50px;
  position: relative;
  margin-left:-22px;
  margin-right:-5px;
}
#repeat::after{
  content:'..';
  color:#333;
  position:relative;
  top:-58px;
  left:px;
  font-size:90px;
  text-align:center;
  font-family:Garamond;
}

/*#repeat-sign {
  width:40px;
  margin-top:-52px;
  margin-right:6px;
  position:relative;
  display:inline-block;
}*/

#right-brace {
  color:#333;
  opacity:0.38;
  font-size:70px;
  top:-10px;
  margin-left:13px;
  position:relative;
  display:inline-block;
}

.key-name {
  display:inline-block !important;
}

#twitter-button:hover {
  color:white;
  background-color:#00aced;
  transition:0.2s;
}
#facebook-button:hover {
  color:white;
  background-color:#3b5998;
  transition:0.2s;
}
#linkedin-button:hover {
  color:white;
  background-color:#007bb6;
  transition:0.2s;
}
#github-button:hover {
  color:white;
  background-color:#4183c4;
  transition:0.2s;
}
#instagram-button:hover {
  color:white;
  background-color:#517fa4;
  transition:0.2s;
}
#soundcloud-button {
  padding-left:6px !important;
}
#soundcloud-button span{
  margin-left:-3px;
}
#soundcloud-button:hover {
  color:white;
  background-color:#f80;
  transition:0.2s;
}
#backloggery-button:hover {
  color:white;
  background-color:#1d1d1d;
  transition:0.2s;
}
.btn-group .btn i {
  margin-right:5px;
}

.btn-group .btn span {
  position:relative;
  top:90%;
  display:block;
}

.btn-group .btn {
  height:250px;
  position:relative;
  max-width:100px;
}

.btn-group {
  position:relative;
  margin:80px 0 80px;
  box-shadow:0 5px 5px #eee;
}

.black-key {
  position:absolute;
  width:40px;
  left:-21px;
  top:0;
  height:155px;
  background-color:#111;
  border-radius:5px;
  z-index:1000;
  box-shadow: 0 2px 2px #444;

}

#contact-form {
}


/*Responsive*/
@media only screen and (max-width:993px){
  .project img {
    width:auto !important;
    height:auto !important;
  }
  #profile {
    margin:0 auto !important;
  }
  #home .row p,
  #home .row h4,
  #home .row ul {
    text-align:center !important;
  }
  #home .row ul {
    padding-left:0 !important;
  }
}

@media only screen and (max-width:768px){
  .nav {
    text-align:right;
  }
  .nav > li {
    display:inline-block;
  }
}

@media only screen and (max-width:678px){
  .btn-group .btn{
    min-width:70px !important;
  }
  .key-name{
    display:none !important;
  }
  #connect i {
    font-size:24px !important;
  }
  .btn-group .btn i {
    margin-right:0px !important;
  }
  .black-key {
    width:35px !important;
  }
  #soundcloud-button {
    padding-left:12px !important;
    max-width:50px !important;
  }
}
@media only screen and (max-width:531px){
  .btn-group .btn{
    min-width:50px !important;
    height:205px !important;
    padding-bottom:20px !important;
  }
  .black-key {
    width:30px !important;
    left:-17px !important;
    height:125px !important;
  }
  #connect i {
    font-size:24px !important;
  }
  h1 {
    font-size:32px !important;
  }
  #repeat {
    top:51px !important;
    width:70px !important;
  }

}

